新增生产环境配置